--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<div class="header-row">
 									<div class="header-logo px-4">
 										<a href="index.html">
-											<img alt="Porto One Page Agency" width="180" height="45" src="img/logo.png">
+											<img alt="Porto One Page Agency" width="180" height="45" src="img/logo.webp">
 										</a>
 									</div>
 								</div>
@@ -153,7 +153,7 @@
 							<div class="owl-stage">
 
 								<div class="owl-item position-relative">
-									<div class="background-image-wrapper position-absolute top-0 left-0 right-0 bottom-0 animated kenBurnsToRightTop" style="background-image: url(img/Web.jpg); background-size: cover; background-position: center; animation-duration: 20s;"></div>
+									<div class="background-image-wrapper position-absolute top-0 left-0 right-0 bottom-0 animated kenBurnsToRightTop" style="background-image: url(img/Web.webp); background-size: cover; background-position: center; animation-duration: 20s;"></div>
 									<div class="container position-relative z-index-3 h-100">
 										<div class="row justify-content-start align-items-center h-100">
 											<div class="col-lg-7 text-center text-sm-start mb-4 pb-5 pb-lg-0">
@@ -178,7 +178,7 @@
 
 								<!-- Carousel Slide 2 -->
 								<div class="owl-item position-relative">
-									<div class="background-image-wrapper position-absolute top-0 left-0 right-0 bottom-0 animated kenBurnsToRightTop" style="background-image: url(img/Mobile.jpg); background-size: cover; background-position: center; animation-duration: 20s;"></div>
+									<div class="background-image-wrapper position-absolute top-0 left-0 right-0 bottom-0 animated kenBurnsToRightTop" style="background-image: url(img/Mobile.webp); background-size: cover; background-position: center; animation-duration: 20s;"></div>
 									<div class="container position-relative z-index-3 h-100">
 										<div class="row justify-content-start align-items-center h-100">
 											<div class="col-lg-7 text-center text-sm-start mb-4 pb-5 pb-lg-0">
