--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<div class="header-row">
 									<div class="header-logo px-4">
 										<a href="index.html">
-											<img alt="Porto One Page Agency" width="180" height="45" src="img/logo.webp">
+											<img alt="Porto One Page Agency" width="160" height="45" src="img/logo1.webp">
 										</a>
 									</div>
 								</div>
