--- a/ajax/portfolio-ajax-project-1.html
+++ b/ajax/portfolio-ajax-project-1.html
@@ -13,7 +13,7 @@
 			<a href="#" data-ajax-portfolio-next class="text-decoration-none d-block float-end">
 				<div class="d-flex align-items-center text-end line-height-1">
 					<div class="d-none d-sm-block line-height-1">
-						<span class="text-dark opacity-4 text-1">SIGUIENTE</span>
+						<span class="text-dark opacity-4 text-1">NEXT PROJECT</span>
 						<h4 class="font-weight-bold text-3 mb-0">24Siete</h4>
 					</div>
 					<i class="fas fa-arrow-right text-dark text-4 ms-3"></i>
@@ -27,28 +27,28 @@
 		<div class="col-sm-6">
 
 			<div class="img-thumbnail border-0 border-radius-0 p-0 d-block">
-				<img src="img/projects/case-4.png" class="img-fluid border-radius-0" alt="">
+				<img src="img/case-4.webp" class="img-fluid border-radius-0" alt="">
 			</div>
 
 			<hr class="solid my-5">
 
-			<strong class="text-uppercase text-1 me-3 text-dark float-start position-relative top-2">Compartir</strong>
+			<strong class="text-uppercase text-1 me-3 text-dark float-start position-relative top-2">Share</strong>
 			<ul class="social-icons">
 				<li class="social-icons-instagram"><a href="https://www.instagram.com/veneserving?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
 			</ul>
 
 		</div>
 		<div class="col-sm-6">
-			<h2 class="text-color-dark font-weight-normal text-4 mb-0"><strong class="font-weight-extra-bold">Descripción</strong></h2>
-			<p>Veneserving tiene como objetivo contribuir en la mejora de la condición física integral de los trabajadores en las empresas donde prestamos servicios, para el optimo desempeño de sus actividades dentro y fuera de la empresa.</p>
+			<h2 class="text-color-dark font-weight-normal text-4 mb-0 mt-4">Project <strong class="font-weight-extra-bold">Details</strong></h2>
+			<p>Veneserving aims to contribute to the improvement of the comprehensive physical condition of the workers of the companies where we provide services, for the optimal performance of their activities inside and outside the company.</p>
 
-			<p>Auditar, Mantener y Promover la seguridad del ambiente de trabajo, como condición indispensable para brindar una adecuada protección al individuo (condiciones inseguras) y conocer los problemas que hacen que el individuo no tome en cuenta sus prioridad, como el resguardo ante algún riesgo .</p>
+			<p>Audit, Maintain and Promote the safety of the work environment, as an essential condition to provide adequate protection to the individual (unsafe conditions) and know the problems that cause the individual not to take into account their priorities, such as protection against any risk.</p>
 
-			<h2 class="text-color-dark font-weight-normal text-4 mb-0 mt-4">Detalles</h2>
+			<h2 class="text-color-dark font-weight-normal text-4 mb-0 mt-4">Details</h2>
 			<ul class="list list-icons list-primary list-borders text-2">
-				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Cliente:</strong> Raichid Yasbek</li>
-				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Fecha:</strong> Noviembre del 2023</li>
-				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Skills:</strong> <a href="#" class="badge badge-dark badge-sm rounded-pill px-2 py-1 ms-1">WORDPRESS</a><a href="#" class="badge badge-dark badge-sm rounded-pill px-2 py-1 ms-1">DIVI</a><a href="#" class="badge badge-dark badge-sm rounded-pill px-2 py-1 ms-1">SITIO WEB</a></li>
+				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Client:</strong> Raichid Yasbek</li>
+				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Date:</strong> November 2023</li>
+				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Skills:</strong> <a href="#" class="badge badge-dark badge-sm rounded-pill px-2 py-1 ms-1">WORDPRESS</a><a href="#" class="badge badge-dark badge-sm rounded-pill px-2 py-1 ms-1">DIVI</a><a href="#" class="badge badge-dark badge-sm rounded-pill px-2 py-1 ms-1">WEBSITE</a></li>
 				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Project URL:</strong> <a href="https://veneserving.com/" target="_blank" class="text-dark">https://veneserving.com/</a></li>
 			</ul>
 		</div>
