--- a/ajax/portfolio-ajax-project-2.html
+++ b/ajax/portfolio-ajax-project-2.html
@@ -6,8 +6,8 @@
 				<div class="d-flex align-items-center line-height-1">
 					<i class="fas fa-arrow-left text-dark text-4 me-3"></i>
 					<div class="d-none d-sm-block line-height-1">
-						<span class="text-dark opacity-4 text-1">ANTERIOR</span>
-						<h4 class="font-weight-bold text-3 mb-0">Veneserving</h4>
+						<span class="text-dark opacity-4 text-1">PREVIOUS PROJECT</span>
+						<h4 class="font-weight-bold text-3 mb-0">Venezolana de Servicios e Ingeniería c.a.</h4>
 					</div>
 				</div>
 			</a>
@@ -25,7 +25,7 @@
 			<a href="#" data-ajax-portfolio-next class="text-decoration-none d-block float-end">
 				<div class="d-flex align-items-center text-end line-height-1">
 					<div class="d-none d-sm-block line-height-1">
-						<span class="text-dark opacity-4 text-1">SIGUIENTE</span>
+						<span class="text-dark opacity-4 text-1">NEXT PROJECT</span>
 						<h4 class="font-weight-bold text-3 mb-0">Lopcymat-Veneserving</h4>
 					</div>
 					<i class="fas fa-arrow-right text-dark text-4 ms-3"></i>
@@ -39,12 +39,12 @@
 		<div class="col-sm-6">
 
 			<div class="img-thumbnail border-0 border-radius-0 p-0 d-block">
-				<img src="img/projects/case-5.png" class="img-fluid border-radius-0" alt="">
+				<img src="img/case-5.webp" class="img-fluid border-radius-0" alt="">
 			</div>
 
 			<hr class="solid my-5">
 
-			<strong class="text-uppercase text-1 me-3 text-dark float-start position-relative top-2">Compartir</strong>
+			<strong class="text-uppercase text-1 me-3 text-dark float-start position-relative top-2">Share</strong>
 			<ul class="social-icons">
 				<li class="social-icons-facebook"><a href="https://www.facebook.com/profile.php?id=100094016480401&mibextid=ZbWKwL" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
 				<li class="social-icons-instagram"><a href="https://www.instagram.com/24sieteapp?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
@@ -52,15 +52,15 @@
 
 		</div>
 		<div class="col-sm-6">
-			<h2 class="text-color-dark font-weight-normal text-4 mb-0"><strong class="font-weight-extra-bold">Descripción</strong></h2>
-			<p>24siete es una aplicación directorio médico que te permite encontrar y contactar médicos especialistas en Venezuela de forma rápida y sencilla. Con 24siete, no tienes que esperar largas colas ni depender de intermediarios para acceder a una atención médica de calidad. Solo tienes que ingresar a la aplicación, elegir el tipo de consulta que necesitas y ver los perfiles de los médicos disponibles.</p>			
+			<h2 class="text-color-dark font-weight-normal text-4 mb-0">Project <strong class="font-weight-extra-bold">Description</strong></h2>
+			<p>24siete is a medical directory application that allows you to find and contact specialist doctors in Venezuela quickly and easily. With 24siete, you don't have to wait in long lines or depend on intermediaries to access quality medical care. You just have to enter the application, choose the type of consultation you need and see the profiles of the available doctors.</p>			
 			
-			<p>24siete cuenta con una amplia guía médica que abarca diversas especialidades, como cardiología, dermatología, pediatría, entre otras. Además, puedes buscar médicos por signos o síntomas que presentes, como dolor de cabeza, fiebre, tos, etc. Así, puedes encontrar al médico más adecuado para tu caso.</p>
+			<p>24siete has an extensive medical guide that covers various specialties, such as cardiology, dermatology, pediatrics, among others. Additionally, you can look for doctors based on signs or symptoms you have, such as headache, fever, cough, etc. This way, you can find the most suitable doctor for your case.</p>
 
-			<h2 class="text-color-dark font-weight-normal text-4 mb-0 mt-4">Detalles</h2>
+			<h2 class="text-color-dark font-weight-normal text-4 mb-0 mt-4">Project <strong class="font-weight-extra-bold">Details</strong></h2>
 			<ul class="list list-icons list-primary list-borders text-2">
-				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Cliente:</strong> Mohamed Sahíli</li>
-				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Fecha:</strong> Abríl del 2023</li>
+				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Client:</strong> Mohamed Sahíli</li>
+				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Date:</strong> April 2023</li>
 				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Skills:</strong> <a href="#" class="badge badge-dark badge-sm rounded-pill px-2 py-1 ms-1">REACT-NATIVE</a><a href="#" class="badge badge-dark badge-sm rounded-pill px-2 py-1 ms-1">IOS(Xcode)</a><a href="#" class="badge badge-dark badge-sm rounded-pill px-2 py-1 ms-1">APP MOBILE</a></li>
 				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Project URL:</strong> <a href="https://play.google.com/store/apps/details?id=app.siete24" target="_blank" class="text-dark">https://24Siete.playStore/</a></li>
 			</ul>
