--- a/ajax/portfolio-ajax-project-3.html
+++ b/ajax/portfolio-ajax-project-3.html
@@ -6,7 +6,7 @@
 				<div class="d-flex align-items-center line-height-1">
 					<i class="fas fa-arrow-left text-dark text-4 me-3"></i>
 					<div class="d-none d-sm-block line-height-1">
-						<span class="text-dark opacity-4 text-1">ANTERIOR</span>
+						<span class="text-dark opacity-4 text-1">PREVIOUS PROJECT</span>
 						<h4 class="font-weight-bold text-3 mb-0">24Siete</h4>
 					</div>
 				</div>
@@ -28,27 +28,27 @@
 		<div class="col-sm-6">
 
 			<div class="img-thumbnail border-0 border-radius-0 p-0 d-block">
-				<img src="img/projects/case-6.png" class="img-fluid border-radius-0" alt="">
+				<img src="img/case-6.wepb" class="img-fluid border-radius-0" alt="">
 			</div>
 
 			<hr class="solid my-5">
 
-			<strong class="text-uppercase text-1 me-3 text-dark float-start position-relative top-2">Compartir</strong>
+			<strong class="text-uppercase text-1 me-3 text-dark float-start position-relative top-2">Share</strong>
 			<ul class="social-icons">
 				<li class="social-icons-instagram"><a href="https://www.instagram.com/veneserving?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
 			</ul>
 
 		</div>
 		<div class="col-sm-6">
-			<h2 class="text-color-dark font-weight-normal text-4 mb-0"><strong class="font-weight-extra-bold">Descripción</strong></h2>
-			<p>Una Normativa cuyo propósito es Obligatorio!. La LOPCYMAT es una ley en Venezuela que tiene como objetivo garantizar la seguridad y salud de los trabajadores en el ambiente laboral.</p>			
+			<h2 class="text-color-dark font-weight-normal text-4 mb-0">Project <strong class="font-weight-extra-bold">Description</strong></h2>
+			<p>A Regulation whose purpose is Mandatory! The LOPCYMAT is a law in Venezuela that aims to guarantee the safety and health of workers in the work environment.</p>			
 			
-			<p>Landing page creada con propósitos estratégicos de marketing y posicionamiento (SEO)</p>
+			<p>Landing page created for strategic marketing and positioning (SEO) purposes</p>
 
-			<h2 class="text-color-dark font-weight-normal text-4 mb-0 mt-4">Detalles</h2>
+			<h2 class="text-color-dark font-weight-normal text-4 mb-0 mt-4">Project <strong class="font-weight-extra-bold">Details</strong></h2>
 			<ul class="list list-icons list-primary list-borders text-2">
-				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Cliente:</strong> Raichid Yasbek</li>
-				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Fecha:</strong> Noviembre del 2023</li>
+				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Client:</strong> Raichid Yasbek</li>
+				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Date:</strong> November 2023</li>
 				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Skills:</strong> <a href="#" class="badge badge-dark badge-sm rounded-pill px-2 py-1 ms-1">HTML5</a><a href="#" class="badge badge-dark badge-sm rounded-pill px-2 py-1 ms-1">BOOTSTRAP</a><a href="#" class="badge badge-dark badge-sm rounded-pill px-2 py-1 ms-1">TAILDWIND</a><a href="#" class="badge badge-dark badge-sm rounded-pill px-2 py-1 ms-1">LANDING PAGE</a></li>
 				<li><i class="fas fa-caret-right left-10"></i> <strong class="text-color-primary">Project URL:</strong> <a href="https://lopcymat.veneserving.com/" target="_blank" class="text-dark">https://lopcymat.veneserving.com/</a></li>
 			</ul>
