--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
 										</div>
 										<div class="d-flex align-items-center pb-2 mb-4">
 											<img width="40" height="40" src="img/demos/one-page-agency/icons/phone.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-light'}" />
-											<a href="tel:1234657890" class="d-inline-block text-color-light font-weight-bold text-decoration-none text-4 opacity-hover-9 ms-2">(+58) 412-1149207</a>
+											<a href="tel:+584121149207" class="d-inline-block text-color-light font-weight-bold text-decoration-none text-4 opacity-hover-9 ms-2">(+58) 412-1149207</a>
 										</div>
 										<form class="contact-form form-fields-size-md form-style-3 form-errors-light mb-2" action="https://formspree.io/f/mqkrenyb" method="POST">
 											<div class="contact-form-success alert alert-success d-none mt-4">
