--- a/ajax/portfolio-ajax-project-3.html
+++ b/ajax/portfolio-ajax-project-3.html
@@ -28,7 +28,7 @@
 		<div class="col-sm-6">
 
 			<div class="img-thumbnail border-0 border-radius-0 p-0 d-block">
-				<img src="img/case-6.wepb" class="img-fluid border-radius-0" alt="">
+				<img src="img/case-6.webp" class="img-fluid border-radius-0" alt="">
 			</div>
 
 			<hr class="solid my-5">
